trunk/NewArchive/3b840b9f73b4a723711f2e4fa785f5d9-3b440a87a52fe2ae7c853c82f4c5144f/output
+ g++ -std=c++1y -O3 -Wall -Wextra -pedantic-errors -pthread main.cpp
main.cpp:7:66: error: types may not be defined in a new-expression
 SomeAbstractClass * obj = new ( class : public SomeAbstractClass {
                                                                  ^
